fixed brennen feature and spacing

--- a/src/styles/_spacing.scss
+++ b/src/styles/_spacing.scss
@@ -173,3 +173,8 @@ $directions: 'top' 'bottom' 'left' 'right';
     padding: 0 !important;
   }
 }
+
+.spacer {
+  height: 20px;
+  width: 100%;
+}
