--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -86,9 +86,6 @@ ol {
       word-wrap: break-word;
     }
   }
-  li {
-    margin-bottom: 20px;
-  }
 }
 ul {
   padding-left: 0;
